--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "numeral": "^2.0.6",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue-tailwind-datepicker": "^1.6.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
