--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-VITE_API_URL=http://localhost:8000
+# VITE_API_URL=http://localhost:8000
+# VITE_API_URL=http://localhost:8000
+VITE_API_URL=https://qcloud.qaccounting.id/quinos_backend/public
+# VITE_API_URL=https://aljazeerah.qaccounting.id/quinos_backend/public
