--- a/package.json
+++ b/package.json
@@ -9,27 +9,33 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@mdi/js": "^7.0.96",
-    "axios": "^1.5.0",
+    "@mdi/js": "^7.3.67",
+    "axios": "^1.6.2",
     "chart.js": "^4.4.0",
+    "fs": "^0.0.1-security",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "numeral": "^2.0.6",
-    "pinia": "^2.1.6",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "vue-tailwind-datepicker": "^1.6.1"
+    "pinia": "^2.1.7",
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5",
+    "vue-tailwind-datepicker": "^1.6.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@tailwindcss/forms": "^0.5.6",
-    "@vitejs/plugin-vue": "^4.3.4",
+    "@rushstack/eslint-patch": "^1.5.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@vitejs/plugin-vue": "^4.5.0",
     "@vue/eslint-config-prettier": "^8.0.0",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "postcss": "^8.4.30",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.54.0",
+    "eslint-plugin-vue": "^9.18.1",
+    "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
-    "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9"
+    "prettier": "^3.1.0",
+    "tailwindcss": "^3.3.5",
+    "vite": "^4.5.0"
   }
 }
